# Contract_Bridge

./: README.md  Teamwork_Contract.md  Three_Pitches.md  gallery.yaml  hostTest.py  requirements.txt
Contract_Bridge/: .gitignore  Contract_Bridge.opam  Install.txt  Makefile  dune-project
Contract_Bridge/lib/: Card.ml  Card.mli  Contract.ml  Contract.mli  Deck.ml  Deck.mli  Game.ml  Game.mli  Hand.ml  Hand.mli  dune
Contract_Bridge/test/: dune  main.ml
