(lang dune 3.10)

(name Contract_Bridge)

(generate_opam_files true)

(source
 (github yy958/PROJECT_APC))

(authors "Yilun Yin / Yiwen Zhang / Andy Li")

(maintainers "Yilun Yin / Yiwen Zhang / Andy Li")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Contract_Bridge)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
